--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "googleapis": "^165.0.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
